src/cpp/inc/sqeazy.h

/*
*	Sqeazy - Fast and flexible volume compression library
*
* 	Header file
*
*	Note: endianess is little by default.
*/


/*
*	Example pipeline:
*
*	Encoding:
*	SQY_RasterDiffEncode_3D_UI16 -> SQY_BitSwap4Encode_UI16 -> SQY_RLEEncode_UI8 -> SQY_LZ4Encode
*
*
*	Decoding:
*	SQY_LZ4Decode -> SQY_RLEDecode_UI8 -> SQY_BitSwap4Decode_UI16 -> SQY_RasterDiffDecode_3D_UI16
*
*/



//#############################################################################
// Differential coding schemes:

/*
	SQY_RasterDiffEncode_3D_UI16 - Raster differencing scheme on 3D unsigned 16 bit int data.

	Encoding: Each following voxel is visited in row major order and the difference between the current voxel
	and the average of already visited neighboring voxels is computed and stored at the
	corresponding location in the destination buffer. Boundary conditions: if a neighbor of a 
	voxel is outside of the volume, its value is assumed to be 0. For the first voxel, all neighbors
	are outside of the volume and the average is thus 0.

	width, height, depth 	: volume dimensions in voxels
	src 					: row major 3D contiguous array of voxels (externally allocated)
	dst 					: row major 3D contiguous array of voxels (externally allocated)

	Returns 0 if success, another code if there was an error (error codes provided below)

	extensions 1: if src==dst the function is capable of doing in-place processing.	
*/
SQY_FUNCTION_PREFIX int SQY_RasterDiffEncode_3D_UI16(int width, int height, int depth, const char* src, char* dst);
/*
	SQY_RasterDiffDecode_3D_UI16 - Raster differencing scheme on 3D unsigned 16 bit int data.

	Decoding: Each voxel is visited in row major order. The voxel in the destination buffer at the
	current location is computed as the sum of the average of the already decoded neighboring voxels
	and the current difference value stored in the source buffer at the current location.
	Boundary conditions: if a neighbor of a voxel is outside of the volume, its value is assumed to be 0.
	For the first voxel, all neighbors are outside of the volume and the average is thus 0.

	width, height, depth 	: volume dimensions in voxels
	src 					: row major 3D contiguous array of voxels (externally allocated)
	dst 					: row major 3D contiguous array of voxels (externally allocated)

	Returns 0 if success, another code if there was an error (error codes provided below)

	extensions 1: if src==dst the function is capable of doing in-place processing.	
*/
SQY_FUNCTION_PREFIX int SQY_RasterDiffDecode_3D_UI16(int width, int height, int depth, const char* src, char* dst);
//#############################################################################
// Bit-swapping coding schemes:


/*
	SQY_BitSwap4Encode_UI16 - 4 Bit swapping scheme on unsigned 16 bit int data.

	Encoding: Each 16 bit integer is split in four 4 bit parts: Ai, Bi, Ci, Di.
	The destination buffer is filled with first all Ai, then all Bi, then all Ci, 
	then all Di. Thus the destination buffer has the same length as the source buffer.

	src 					: contiguous array of voxels (externally allocated)
	dst 					: contiguous array of voxels (externally allocated)
	length 					: length of both buffers

	Returns 0 if success, another code if there was an error (error codes provided below)

	extensions 1: if src==dst the function is capable of doing in-place processing.	
*/
SQY_FUNCTION_PREFIX int SQY_BitSwap4Encode_UI16(const char* src, char* dst, long length);
SQY_FUNCTION_PREFIX int SQY_BitSwap4Encode_I16(const char* src, char* dst, long length);
/*
	SQY_BitSwap4Decode_UI16 - 4 Bit swapping scheme on unsigned 16 bit int data.

	Encoding: The permutation described above is inverted.

	src 					: contiguous array of voxels (externally allocated)
	dst 					: contiguous array of voxels (externally allocated)
	length 					: length of both buffers

	Returns 0 if success, another code if there was an error (error codes provided below)

	extensions 1: if src==dst the function is capable of doing in-place processing.	
*/
SQY_FUNCTION_PREFIX int SQY_BitSwap4Decode_UI16(const char* src, char* dst, long length);
SQY_FUNCTION_PREFIX int SQY_BitSwap4Decode_I16(const char* src, char* dst, long length);
/*
	SQY_BitSwap8Encode_UI16 - 8 Bit swapping scheme on unsigned 16 bit int data.

	Encoding: Each 16 bit integer is split in two 8 bit parts: Ai, Bi.
	The destination buffer is filled with first all Ai, then all Bi, 
	Thus the destination buffer has the same length as the source buffer.

	src 					: contiguous array of voxels (externally allocated)
	dst 					: contiguous array of voxels (externally allocated)
	length 					: length of both buffers

	Returns 0 if success, another code if there was an error (error codes provided below)

	extensions 1: if src==dst the function is capable of doing in-place processing.	
*/
SQY_FUNCTION_PREFIX int SQY_BitSwap8Encode_UI16(const char* src, char* dst, long length);
/*
	SQY_BitSwap8Decode_UI16 - 8 Bit swapping scheme on unsigned 16 bit int data.

	Encoding: The permutation described above is inverted.

	src 					: contiguous array of voxels (externally allocated)
	dst 					: contiguous array of voxels (externally allocated)
	length 					: length of both buffers

	Returns 0 if success, another code if there was an error (error codes provided below)

	extensions 1: if src==dst the function is capable of doing in-place processing.	
*/
SQY_FUNCTION_PREFIX int SQY_BitSwap8Decode_UI16(const char* src, char* dst, long length);
SQY_FUNCTION_PREFIX int SQY_BitSwap8Encode_I16(const char* src, char* dst, long length);
SQY_FUNCTION_PREFIX int SQY_BitSwap8Decode_I16(const char* src, char* dst, long length);
SQY_FUNCTION_PREFIX int SQY_BitSwap2Encode_UI16(const char* src, char* dst, long length);
SQY_FUNCTION_PREFIX int SQY_BitSwap2Decode_UI16(const char* src, char* dst, long length);
SQY_FUNCTION_PREFIX int SQY_BitSwap2Encode_I16(const char* src, char* dst, long length);
SQY_FUNCTION_PREFIX int SQY_BitSwap2Decode_I16(const char* src, char* dst, long length);