src/java/src/sqeazy/bindings/SqeazyLibrary.java

package sqeazy.bindings;
import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.Pointer;
import org.bridj.ann.Library;
import org.bridj.ann.Ptr;
import org.bridj.ann.Runtime;
/**
 * Wrapper for library <b>sqeazy</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library("sqeazy") 
@Runtime(CRuntime.class) 
public class SqeazyLibrary {
	static {
		BridJ.register();
	}
	/**
	 * SQY_RasterDiffEncode_3D_UI16 - Raster differencing scheme on 3D unsigned 16 bit int data.<br>
	 * Encoding: Each following voxel is visited in row major order and the difference between the current voxel<br>
	 * and the average of already visited neighboring voxels is computed and stored at the<br>
	 * corresponding location in the destination buffer. Boundary conditions: if a neighbor of a <br>
	 * voxel is outside of the volume, its value is assumed to be 0. For the first voxel, all neighbors<br>
	 * are outside of the volume and the average is thus 0.<br>
	 * width, height, depth 	: volume dimensions in voxels<br>
	 * src 					: row major 3D contiguous array of voxels (externally allocated)<br>
	 * dst 					: row major 3D contiguous array of voxels (externally allocated)<br>
	 * Returns 0 if success, another code if there was an error (error codes provided below)<br>
	 * extensions 1: if src==dst the function is capable of doing in-place processing.<br>
	 * Original signature : <code>int SQY_RasterDiffEncode_3D_UI16(int, int, int, const char*, char*)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:53</i>
	 */
	public static int SQY_RasterDiffEncode_3D_UI16(int width, int height, int depth, Pointer<Byte > src, Pointer<Byte > dst) {
		return SQY_RasterDiffEncode_3D_UI16(width, height, depth, Pointer.getPeer(src), Pointer.getPeer(dst));
	}
	protected native static int SQY_RasterDiffEncode_3D_UI16(int width, int height, int depth, @Ptr long src, @Ptr long dst);
	/**
	 * SQY_RasterDiffDecode_3D_UI16 - Raster differencing scheme on 3D unsigned 16 bit int data.<br>
	 * Decoding: Each voxel is visited in row major order. The voxel in the destination buffer at the<br>
	 * current location is computed as the sum of the average of the already decoded neighboring voxels<br>
	 * and the current difference value stored in the source buffer at the current location.<br>
	 * Boundary conditions: if a neighbor of a voxel is outside of the volume, its value is assumed to be 0.<br>
	 * For the first voxel, all neighbors are outside of the volume and the average is thus 0.<br>
	 * width, height, depth 	: volume dimensions in voxels<br>
	 * src 					: row major 3D contiguous array of voxels (externally allocated)<br>
	 * dst 					: row major 3D contiguous array of voxels (externally allocated)<br>
	 * Returns 0 if success, another code if there was an error (error codes provided below)<br>
	 * extensions 1: if src==dst the function is capable of doing in-place processing.<br>
	 * Original signature : <code>int SQY_RasterDiffDecode_3D_UI16(int, int, int, const char*, char*)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:72</i>
	 */
	public static int SQY_RasterDiffDecode_3D_UI16(int width, int height, int depth, Pointer<Byte > src, Pointer<Byte > dst) {
		return SQY_RasterDiffDecode_3D_UI16(width, height, depth, Pointer.getPeer(src), Pointer.getPeer(dst));
	}
	protected native static int SQY_RasterDiffDecode_3D_UI16(int width, int height, int depth, @Ptr long src, @Ptr long dst);
	/**
	 * SQY_BitSwap4Encode_UI16 - 4 Bit swapping scheme on unsigned 16 bit int data.<br>
	 * Encoding: Each 16 bit integer is split in four 4 bit parts: Ai, Bi, Ci, Di.<br>
	 * The destination buffer is filled with first all Ai, then all Bi, then all Ci, <br>
	 * then all Di. Thus the destination buffer has the same length as the source buffer.<br>
	 * src 					: contiguous array of voxels (externally allocated)<br>
	 * dst 					: contiguous array of voxels (externally allocated)<br>
	 * length 					: length of both buffers<br>
	 * Returns 0 if success, another code if there was an error (error codes provided below)<br>
	 * extensions 1: if src==dst the function is capable of doing in-place processing.<br>
	 * Original signature : <code>int SQY_BitSwap4Encode_UI16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:94</i>
	 */
	public static int SQY_BitSwap4Encode_UI16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap4Encode_UI16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap4Encode_UI16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * Original signature : <code>int SQY_BitSwap4Encode_I16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:95</i>
	 */
	public static int SQY_BitSwap4Encode_I16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap4Encode_I16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap4Encode_I16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * SQY_BitSwap4Decode_UI16 - 4 Bit swapping scheme on unsigned 16 bit int data.<br>
	 * Encoding: The permutation described above is inverted.<br>
	 * src 					: contiguous array of voxels (externally allocated)<br>
	 * dst 					: contiguous array of voxels (externally allocated)<br>
	 * length 					: length of both buffers<br>
	 * Returns 0 if success, another code if there was an error (error codes provided below)<br>
	 * extensions 1: if src==dst the function is capable of doing in-place processing.<br>
	 * Original signature : <code>int SQY_BitSwap4Decode_UI16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:110</i>
	 */
	public static int SQY_BitSwap4Decode_UI16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap4Decode_UI16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap4Decode_UI16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * Original signature : <code>int SQY_BitSwap4Decode_I16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:111</i>
	 */
	public static int SQY_BitSwap4Decode_I16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap4Decode_I16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap4Decode_I16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * SQY_BitSwap8Encode_UI16 - 8 Bit swapping scheme on unsigned 16 bit int data.<br>
	 * Encoding: Each 16 bit integer is split in two 8 bit parts: Ai, Bi.<br>
	 * The destination buffer is filled with first all Ai, then all Bi, <br>
	 * Thus the destination buffer has the same length as the source buffer.<br>
	 * src 					: contiguous array of voxels (externally allocated)<br>
	 * dst 					: contiguous array of voxels (externally allocated)<br>
	 * length 					: length of both buffers<br>
	 * Returns 0 if success, another code if there was an error (error codes provided below)<br>
	 * extensions 1: if src==dst the function is capable of doing in-place processing.<br>
	 * Original signature : <code>int SQY_BitSwap8Encode_UI16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:128</i>
	 */
	public static int SQY_BitSwap8Encode_UI16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap8Encode_UI16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap8Encode_UI16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * SQY_BitSwap8Decode_UI16 - 8 Bit swapping scheme on unsigned 16 bit int data.<br>
	 * Encoding: The permutation described above is inverted.<br>
	 * src 					: contiguous array of voxels (externally allocated)<br>
	 * dst 					: contiguous array of voxels (externally allocated)<br>
	 * length 					: length of both buffers<br>
	 * Returns 0 if success, another code if there was an error (error codes provided below)<br>
	 * extensions 1: if src==dst the function is capable of doing in-place processing.<br>
	 * Original signature : <code>int SQY_BitSwap8Decode_UI16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:143</i>
	 */
	public static int SQY_BitSwap8Decode_UI16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap8Decode_UI16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap8Decode_UI16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * Original signature : <code>int SQY_BitSwap8Encode_I16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:144</i>
	 */
	public static int SQY_BitSwap8Encode_I16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap8Encode_I16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap8Encode_I16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * Original signature : <code>int SQY_BitSwap8Decode_I16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:145</i>
	 */
	public static int SQY_BitSwap8Decode_I16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap8Decode_I16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap8Decode_I16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * Original signature : <code>int SQY_BitSwap2Encode_UI16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:148</i>
	 */
	public static int SQY_BitSwap2Encode_UI16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap2Encode_UI16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap2Encode_UI16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * Original signature : <code>int SQY_BitSwap2Decode_UI16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:149</i>
	 */
	public static int SQY_BitSwap2Decode_UI16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap2Decode_UI16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap2Decode_UI16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * Original signature : <code>int SQY_BitSwap2Encode_I16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:150</i>
	 */
	public static int SQY_BitSwap2Encode_I16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap2Encode_I16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
	protected native static int SQY_BitSwap2Encode_I16(@Ptr long src, @Ptr long dst, @org.bridj.ann.CLong long length);
	/**
	 * Original signature : <code>int SQY_BitSwap2Decode_I16(const char*, char*, long)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:151</i>
	 */
	public static int SQY_BitSwap2Decode_I16(Pointer<Byte > src, Pointer<Byte > dst, @org.bridj.ann.CLong long length) {
		return SQY_BitSwap2Decode_I16(Pointer.getPeer(src), Pointer.getPeer(dst), length);
	}
